<resources>
    <string name="app_name">Trabajo Practico Integrador</string>
    <string name="toolbar_texto">Películas</string>
    <string name="director">Director</string>
    <string name="anio">Lanzamiento</string>
    <string name="favoritos">Favoritos</string>
    <string name="genero">Genero</string>
    <string name="sinopsis">SINOPSIS</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="tyc">He leído y estoy de acuerdo con los términos y   condiciones</string>
    <string name="registrar_usuario">Registrar usuario</string>
    <string name="registro_usuario">Registro usuario</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="cb_recordar">Recordar usuario</string>
    <string name="sp_credenciales">SP_CREDENCIALES</string>
    <string name="busqueda">Buscar película</string>
    <string name="agregar_pelicula">Agregar pelicula</string>
    <string name="elegir_imagen">Elegir imagen</string>
    <string name="recaudacion">Recaudacion</string>
    <string name="Rating">Rating</string>

</resources>