<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        app:layout_constraintVertical_bias="0.10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="8dp"
        android:hint="@string/usuario"
        android:autofillHints="name"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/pass"
        android:drawablePadding="8dp"
        android:hint="@string/contrasenia"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario"
        app:layout_constraintVertical_bias="0.05"/>

    <CheckBox
        android:id="@+id/cbLogin"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/cb_recordar"
        app:layout_constraintBottom_toTopOf="@+id/btnRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginHorizontal="10dp"
        android:text="@string/registro_usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.2"
        android:text="@string/iniciar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRegistro"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />





</androidx.constraintlayout.widget.ConstraintLayout>