<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescripcionActivity"
    android:background="@drawable/gradient_color_background"
    >

    <TextView
        android:id="@+id/tvDescripcionNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3sp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:minLines="2"
        tools:text="NOMBRE MUY LARGO PARA PROBAR" />


    <ImageView
        android:id="@+id/ivDescripcionPelicula"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginHorizontal="5sp"
        tools:background="@color/cardview_dark_background"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcionNombre"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvañoTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginHorizontal="5sp"
        android:layout_marginVertical="15sp"
        android:text="@string/anio"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcionGenero"
        app:layout_constraintStart_toEndOf="@+id/ivDescripcionPelicula"/>

    <TextView
        android:id="@+id/tvDescripcionAño"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        tools:text="1842"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="5sp"
        android:layout_marginVertical="5sp"
        app:layout_constraintTop_toBottomOf="@+id/tvañoTexto"
        app:layout_constraintStart_toEndOf="@+id/ivDescripcionPelicula"/>

    <TextView
        android:id="@+id/tvDirectorTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:text="@string/director"
        android:textAlignment="center"
        android:layout_marginHorizontal="5sp"
        android:layout_marginVertical="15sp"
        app:layout_constraintStart_toEndOf="@+id/ivDescripcionPelicula"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcionNombre" />



    <TextView
        android:id="@+id/tvDescripcionDirector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        tools:text="Martin Scorsese"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginVertical="5sp"
        android:layout_marginHorizontal="5sp"
        app:layout_constraintTop_toBottomOf="@+id/tvDirectorTexto"
        app:layout_constraintStart_toEndOf="@+id/ivDescripcionPelicula"/>

    <TextView
        android:id="@+id/tvGeneroTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginHorizontal="5sp"
        android:layout_marginVertical="15sp"
        android:text="@string/genero"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/tvDescripcionDirector"
        app:layout_constraintStart_toEndOf="@+id/ivDescripcionPelicula"/>



    <TextView

        android:id="@+id/tvDescripcionGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Genero"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_marginVertical="5sp"
        android:layout_marginHorizontal="5sp"
        app:layout_constraintTop_toBottomOf="@+id/tvGeneroTexto"
        app:layout_constraintStart_toEndOf="@+id/ivDescripcionPelicula"/>


    <TextView
        android:id="@+id/tvPeliculaSinopsisTexto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/sinopsis"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginHorizontal="3sp"
        android:layout_marginVertical="15sp"
        app:layout_constraintTop_toBottomOf="@+id/ivDescripcionPelicula" />

    <TextView

        android:id="@+id/tvDescripcionSinopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginHorizontal="5sp"
        android:layout_marginVertical="15sp"
        tools:text="Con la ayuda del teniente James Gordon y el Fiscal de Distrito Harvey Dent, Batman se propone destruir la delincuencia organizada para el bien de Ciudad Gótica. El trío demuestra ser eficaz, pero pronto se ve presa de una creciente mente criminal: conocido como el Guasón, quien empuja a Ciudad Gótica hacia la anarquía y fuerza al Caballero Oscuro a estar más cerca de cruzar la delgada línea entre héroe y vigilante."
        app:layout_constraintTop_toBottomOf="@+id/tvPeliculaSinopsisTexto" />





</androidx.constraintlayout.widget.ConstraintLayout>